fixed spacing between frame and bottom div

--- a/src/App.css
+++ b/src/App.css
@@ -189,8 +189,6 @@ h1 {
 	justify-content: space-evenly;
 	text-align: center;
 	width: 100%;
-	margin: 0.5rem auto;
-	padding: 0.5rem;
 	border-radius: 12px;
 	background-color: rgba(255,255,255, 0.2);
 }
